sourceEncoding ja outputEncoding lisätty

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 		<tomcat.version>9.0.31</tomcat.version>
 		<maven.compiler.target>1.9</maven.compiler.target>
 		<maven.compiler.source>1.9</maven.compiler.source>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
 	<dependencies>
