--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<properties>
 		<!-- Tomcatin versionumero -->
-		<tomcat.version>9.0.31</tomcat.version>
+		<tomcat.version>10.0.0-M3</tomcat.version>
 
 		<!-- Javan versionumero -->
 		<maven.compiler.target>1.9</maven.compiler.target>
