--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,12 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-
+		<dependency>            
+		    <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.32.3.2</version>
+        </dependency>
+		
 		<!-- Tuki JSP-sivujen Expressien Language -kielelle: -->
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
