Dao-aiheen lisääminen

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,6 @@
 theme: jekyll-theme-cayman
 title: Ohjelmointi 2
 description: Haaga-Helia, syksy 2020 ❄️
+site:
+  github:
+    is_project_page: false
