--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,4 +3,4 @@ title: Ohjelmointi 2
 description: Haaga-Helia, syksy 2020 ❄️
 github:
   is_project_page: false
-google_analytics: G-XXPZRPESJL
+google_analytics: UA-182579893-1
